@@ -1,11 +1,16 @@
+2009-10-14  Dennis Cranston  <dennis_cranston@yahoo.com>
+
+	* gsearchtool.c, gsearchtool-callbacks.[ch]:  Resurrect the 
+	"--version" command line argument.
+	
 2009-09-29  Dennis Cranston  <dennis_cranston@yahoo.com>
 
-	*  gsearchtool.c:  Properly handle invalid command line 
+	* gsearchtool.c:  Properly handle invalid command line 
 	arguments.
 
 2009-09-28  Dennis Cranston  <dennis_cranston@yahoo.com>
 
-	*  gsearchtool-callbacks.c:  Fix possible crash after
+	* gsearchtool-callbacks.c:  Fix possible crash after
 	delete files.  Patch submitted by Sebastien Bacher.  
 	Bug 595371.
 	
